log out translation

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -106,7 +106,7 @@
 
 
     "Location": "Localização",
-    "Log out" : "Sair",
+    "Log Out" : "Sair",
     "Log your sleeping schedule": "Registe o seu horario de sono",
     "Loss of urine or bowel control": "Perda de urina ou de controlo da bexiga",
     "Loss of Ability to communicate": "Perda de capacidade de comunicação",
