--- a/lang/pt.json
+++ b/lang/pt.json
@@ -57,6 +57,7 @@
     "Don't have an account?": "Não tem conta?",
     "Dosage" : "Dosagem",
     "Duration of seizure": "Duração da crise",
+    "During the day": "During the day",
 
 
     "Education" : "Educação",
@@ -252,6 +253,8 @@
     "User with this email doesn't exist.": "O usuário com este e-mail não existe.",
     "User with this email has been disabled.": "O usuário com este e-mail foi desativado",
     "Ujjayi": "Ujjayi",
+    "Upon awakening": "Upon awakening",
+    
 
 
     "Was it one of your usual seizures" : "Foi uma das tuas crises habituais",
@@ -260,6 +263,7 @@
     "What is Epilepsy?": "O que é a epilépsia?",
     "What is a seizure?": "O que é uma crise?",
     "What is SUDEP?": "O que é SUDEP?",
+    "While sleeping": "While sleeping",
 
     
     "Yes": "Sim",
