--- a/lang/en.json
+++ b/lang/en.json
@@ -1,212 +1,216 @@
 {
-    
-    "Your email address appears to be invalid.": "Your email address appears to be invalid.",
-    "Your password is invalid.": "Your password is invalid.",
-    "User with this email doesn't exist.": "User with this email doesn't exist.",
-    "User with this email has been disabled.": "User with this email has been disabled.",
-    "Too many requests. Try again later.": "Too many requests. Try again later.",  
-    "Signing in with Email and Password is not enabled.": "Signing in with Email and Password is not enabled.",
-    "An undefined error happened.": "An undefined error happened.",
-    "Sign in successful": "Sign in successful",
-    "Your password is too small.": "Your password is too small.",
-    "This email has already been used.": "This email has already been used.",
+    "your email address appears to be invalid": "your email address appears to be invalid",
+    "your password is invalid": "your password is invalid",
+    "user with this email doesn't exist": "user with this email doesn't exist",
+    "user with this email has been disabled": "user with this email has been disabled",
+    "too many requests" :"too many requests",
+    "try again later": "try again later",  
+    "signing in with Email and Password is not enabled": "signing in with Email and Password is not enabled",
+    "an undefined error happened": "an undefined error happened",
+    "sign in successful": "sign in successful",
+    "your password is too small": "your password is too small",
+    "this email has already been used": "this email has already been used",
    
-    "None": "None",
-    "Unselected": "Unselected",
-    "Diziness": "Diziness",
-    "Headaches": "Headaches",
-    "Irritability": "Irritability",
-    "Mood changes": "Mood changes",
-    "Skipping Menstrual Cycle": "Skipping Menstrual Cycle",
-    "Somnolence": "Somnolence",
-    "Sex": "Sex",
-    "Male": "Male",
-    "Female": "Female",
-    "Must be filled.": "Must be filled.",
-    "Name": "Name",
-    "Age": "Age",
-    "Seizure Frequency": "Seizure Frequency",
+    "none": "none",
+    "unselected": "unselected",
+    "diziness": "diziness",
+    "headaches": "headaches",
+    "irritability": "irritability",
+    "mood changes": "mood changes",
+    "skipping menstrual cycle": "skipping Menstrual Cycle",
+    "somnolence": "somnolence",
+    "sex": "sex",
+    "male": "male",
+    "female": "female",
+    "must be filled": "must be filled",
+    "name": "name",
+    "age": "age",
+    "seizure frequency": "seizure frequency",
     "(e.g. once a week)": "(e.g. once a week)",
-    "Most common type of seizure:   ": "Most common type of seizure:   ",
-    "Absence": "Absence",
-    "Atonic": "Atonic",
-    "Clonic": "Clonic",
-    "Myoclonic": "Myoclonic",
-    "Tonic": "Tonic",
-    "Tonic Clonic": "Tonic clonic",
-    "Medication prescription:   ": "Medication prescription:   ",
-    "Other medication": "Other medication",
-    "Most common secondary effects:   ": "Most common secondary effects:   ",
-    "Finish": "Finish",
+    "most common type of seizure": "most common type of seizure",
+    "absence": "absence",
+    "atonic": "atonic",
+    "clonic": "clonic",
+    "myoclonic": "myoclonic",
+    "tonic": "tonic",
+    "tonic Clonic": "tonic clonic",
+    "medication prescription": "medication prescription",
+    "other medication": "other medication",
+    "most common secondary effects": "most common secondary effects",
+    "finish": "finish",
 
 
-    "Has to be a valid Email.": "Has to be a valid Email.",
-    "You need a password.": "You need a password.",
-    "Password": "Password",
-    "Sign in": "Sign in",
-    "Don't have an account? ": "Don't have an account? ",
-    "Sign up": "Sign up",
+    "has to be a valid Email": "has to be a valid Email",
+    "you need a password": "you need a password",
+    "password": "password",
+    "sign in": "sign in",
+    "don't have an account": "don't have an account",
+    "sign up": "sign up",
 
 
-    "Patient": "Patient",
-    "Caregiver": "Caregiver",
-    "You need an email.": "You need an email.",
-    "Already have an account?": "Already have an account? ",
+    "patient": "patient",
+    "caregiver": "caregiver",
+    "you need an email": "you need an email",
+    "already have an account": "already have an account",
 
-    "Error": "Error",
+    "error": "error",
 
 
-    "Introduction to Epilepsy": "Introduction to Epilepsy",
-    "Information": "Information",
-    "Patients": "Patients",
-    "Camera Access": "Camera Access",
-    "Tool": "Tool",
-    "Record Seizure": "Record Seizure",
+    "introduction to Epilepsy": "introduction to Epilepsy",
+    "information": "information",
+    "patients": "patients",
+    "camera access": "camera access",
+    "tool": "tool",
+    "record seizure": "record seizure",
     "caregiver@gmail.com": "caregiver@gmail.com",
 
 
-    "The person you will be monitoring will have to scan this code.": "The person you will be monitoring will have to scan this code.",
+    "the person you will be monitoring will have to scan this code": "the person you will be monitoring will have to scan this code",
 
 
-    "Patient Info": "Patient Info",
-    "Statistics": "Statistics",
-    "Seizures": "Seizures",
+    "patient info": "patient info",
+    "seizures": "seizures",
     
 
-    "Allow Connected Device(s)": "Allow Connected Device(s)",
-    "Connect": "Connect",
+    "allow connected device(s)": "allow connected device(s)",
 
 
-    "Seizure": "Seizure",
-    "I am ok": "I am ok",
-    "Emergency": "Emergency",
-    "Dismiss": "Dismiss",
+    "seizure": "seizure",
+    "i am ok": "i am ok",
+    "emergency": "emergency",
+    "dismiss": "dismiss",
 
 
-    "Inhale": "Inhale",
-    "Hold": "Hold",
-    "Exhale": "Exhale",
+    "inhale": "inhale",
+    "hold": "hold",
+    "exhale": "exhale",
 
 
-    "To connect to your caregiver, have him scan this QR Code": "To connect to your caregiver, have him scan this QR Code",
+    "to connect to your caregiver, have him scan this QR Code": "to connect to your caregiver, have him scan this QR Code",
 
 
-    "What is Epilepsy?": "What is Epilepsy?",
-    "What is a seizure?": "What is a seizure?",
-    "Types of seizures?": "Types of seizures?",
-    "Possible trigers?": "Possible trigers?",
-    "Treating Seizures": "Treating Seizures",
-    "Managing Epilepsy": "Managing Epilepsy",
-    "What is SUDEP?": "What is SUDEP?",
-    "Challenges in Epilepsy": "Challenges in Epilepsy",
+    "what is Epilepsy": "what is Epilepsy",
+    "what is a seizure": "what is a seizure",
+    "types of seizures": "types of seizures",
+    "treating Seizures": "treating seizures",
+    "managing Epilepsy": "managing Epilepsy",
+    "what is SUDEP": "what is SUDEP",
+    "challenges in Epilepsy": "challenges in Epilepsy",
 
 
-    "Date": "Date",
-    "Time": "Time",
-    "Duration": "Duration",
-    "Type": "Type",
-    "Mood": "Mood",
+    "date": "date",
+    "time": "time",
+    "duration": "duration",
+    "type": "type",
+    "mood": "mood",
 
 
-    "Data": "Data",
-    "Name is Required": "Name is Required",
-    "Symptoms": "Symptoms",
-    "Email is Required": "Email is Required",
-    "Please enter a valid email address": "Please enter a valid email address",
-    "Moods": "Moods",
-    "Password is Required": "Password is Required",
-    "Birth Control Pills": "Birth Control Pills",
-    "URL is Required": "URL is Required",
-    "Submit": "Submit",
+    "data": "data",
+    "name is required": "name is required",
+    "symptoms": "symptoms",
+    "email is required": "email is required",
+    "please enter a valid email address": "please enter a valid email address",
+    "moods": "moods",
+    "password is required": "password is required",
+    "birth control pills": "birth control pills",
+    "URL is required": "URL is required",
+    "submit": "submit",
 
 
-    "Home": "Home",
-    "Surveys": "Surveys",
-    "User": "User",
+    "home": "home",
+    "surveys": "surveys",
+    "user": "user",
+    "increment":"increment",
 
-    "Connected Devices": "Connected Devices",
-    "Medication": "Medication",
-    "Sleep": "Sleep",
-    "Food": "Food",
+    "medication": "medication",
+    "sleep": "sleep",
+    "food": "food",
 
-    "Connected Device": "Connected Device",
-    "Log your sleeping schedule": "Log your sleeping schedule",
-    "Stressed? Relax here": "Stressed? Relax here",
+    "connected device(s)": "connected device(s)",
+    "log your sleeping schedule": "log your sleeping schedule",
+    "stressed": "stressed", 
+    "relax here":" relax here",
 
-    "Types of exercises": "Types of exercises",
-    "Time duration": "Time duration",
+    "types of exercises": "types of exercises",
+    "time duration": "time duration",
+    "1min":"1min",
+    "2min":"2min",
+    "5min":"5min",
+    "10min":"10min",
 
-    "You need to set a time": "You need to set a time",
+    "you need to set a time": "you need to set a time",
     "(e.g. hh:mm am or hh:mm pm)": "(e.g. hh:mm am or hh:mm pm)",
-    "You need to set a duration.": "You need to set a duration.",
-    "Seizure Duration": "Seizure Duration",
+    "you need to set a duration": "you need to set a duration",
+    "seizure duration": "seizure duration",
     "(e.g. mm:ss)": "(e.g. mm:ss)",
-    "Seizure Type:": "Seizure Type:",
-    "Normal": "Normal",
-    "Good": "Good",
-    "Bad": "Bad",
-    "Possible Triggers:": "Possible Triggers:",
-    "Changes in Medication": "Changes in Medication",
-    "Overtired or irregular sleep": "Overtired or irregular sleep",
-    "Irregular Diet": "Irregular Diet",
-    "Alcohol or Drug Abuse": "Alcohol or Drug Abuse",
-    "Bright or flashing lights": "Bright or flashing lights",
-    "Emotional Stress": "Emotional Stress",
-    "Fever or Overheated": "Fever or Overheated",
-    "Hormonal Fluctuations": "Hormonal Fluctuations",
-    "Sick": "Sick",
-    "Other": "Other",
-    "Triggers Notes": "Triggers Notes",
-    "Not filled": "Not filled",
-    "Description:": "Description:",
-    "Had an aura": "Had an aura",
-    "Loss of urine or bowel control": "Loss of urine or bowel control",
-    "Changes in awareness": "Changes in awareness",
-    "Automatic Repeated Movements": "Automatic Repeated Movements",
-    "Loss of Ability to communicate": "Loss of Ability to communicate",
-    "Muscle Stiffness": "Muscle Stiffness",
-    "Muscle twitch": "Muscle twitch",
-    "Loss of consciousness": "Loss of consciousness",
-    "Description Notes": "Description Notes",
-    "Post Events:": "Post Events:",
-    "Unnable to communicate": "Unnable to communicate",
-    "Remembers event": "Remembers event",
-    "Muscle weakness": "Muscle weakness",
-    "Sleepy": "Sleepy",
-    "Post Events Notes": "Post Events Notes",
-    "Add video recording (optional)": "Add video recording (optional)",
+    "seizure type:": "seizure type:",
+    "normal": "normal",
+    "good": "good",
+    "bad": "bad",
+    "possible triggers:": "possible triggers:",
+    "changes in medication": "changes in medication",
+    "overtired or irregular sleep": "overtired or irregular sleep",
+    "irregular diet": "irregular diet",
+    "alcohol or drug abuse": "alcohol or drug abuse",
+    "bright or flashing lights": "bright or flashing lights",
+    "emotional stress": "emotional stress",
+    "fever or overheated": "fever or overheated",
+    "hormonal fluctuations": "hormonal fluctuations",
+    "sick": "sick",
+    "other": "other",
+    "triggers notes": "triggers notes",
+    "not filled": "not filled",
+    "description:": "description:",
+    "had an aura": "had an aura",
+    "loss of urine or bowel control": "loss of urine or bowel control",
+    "changes in awareness": "changes in awareness",
+    "automatic Repeated Movements": "automatic repeated movements",
+    "loss of Ability to communicate": "loss of Ability to communicate",
+    "muscle Stiffness": "muscle stiffness",
+    "muscle twitch": "muscle twitch",
+    "loss of consciousness": "loss of consciousness",
+    "description Notes": "description notes",
+    "post events:": "post events:",
+    "unnable to communicate": "unnable to communicate",
+    "remembers event": "remembers event",
+    "muscle weakness": "muscle weakness",
+    "sleepy": "sleepy",
+    "post events notes": "post events notes",
+    "add video recording (optional)": "add video recording (optional)",
 
 
-    "Sign Out": "Sign Out",
+    "sign Out": "sign out",
 
 
-    "Type of Seizure": "Type of Seizure",
-    "Mood after Seizure": "Mood after Seizure",
-    "Possible Triggers": "Possible Triggers",
+    "type of seizure": "type of seizure",
+    "mood after seizure": "mood after seizure",
+    "possible triggers": "possible triggers",
 
 
     "Inhale-Hold-Exhale-Hold": "Inhale-Hold-Exhale-Hold",
-    "Custom": "Custom",
-    "Awake": "Awake",
-    "Deep Calm": "Deep Calm",
-    "Pranayama": "Pranayama",
-    "Square": "Square",
-    "Ujjayi": "Ujjayi",
+    "custom": "custom",
+    "awake": "awake",
+    "deep calm": "deep Calm",
+    "pranayama": "pranayama",
+    "square": "square",
+    "ujjayi": "ujjayi",
 
 
-    "STATISTICS": "STATISTICS",
-    "MODULES": "MODULES",
-    "CONNECT": "CONNECT",
+    "statistics": "statistics",
+    "modules": "modules",
+    "connect": "connect",
 
 
-    "You need a Survey Name": "You need a Survey Name",
-    "Survey Name": "Survey Name",
-    "You need a question": "You need a question",
-    "Question": "Question",
-    "Add question": "Add question",
-    "Create": "Create",
+    "you need a survey name": "you need a survey name",
+    "survey name": "survey name",
+    "you need a question": "you need a question",
+    "question": "question",
+    "add question": "add question",
+    "create": "create",
 
 
-    "Next": "Next"
+    "next": "next",
+    "location":"location",
+    "answer":"resposta"
 
 }
