--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,211 +1,217 @@
 {
     
-    "Your email address appears to be invalid.": "O seu email é invalido",
-    "Your password is invalid.": "A sua password está incorreta.",
-    "User with this email doesn't exist.": "O usuário com este e-mail não existe.",
-    "User with this email has been disabled.": "O usuário com este e-mail foi desativado",
-    "Too many requests. Try again later.": "Too many requests. Try again later.",  
-    "Signing in with Email and Password is not enabled.": "O login com e-mail e senha não está ativado",
-    "An undefined error happened.": "Ocorreu um erro indefinido.",
-    "Sign in successful": "Autenticação bem-sucedida",
-    "Your password is too small.": "A sua senha é muito pequena.",
-    "This email has already been used.": "Este email já foi usado.",
+    "your email address appears to be invalid": "o seu email é invalido",
+    "your password is invalid": "a sua password está incorreta",
+    "user with this email doesn't exist": "o usuário com este e-mail não existe",
+    "user with this email has been disabled": "o usuário com este e-mail foi desativado",
+    "too many requests": "demasiados pedidos",
+    "try again later": "volte a tentar mais tarde",  
+    "signing in with Email and Password is not enabled": "o login com e-mail e senha não está ativado",
+    "an undefined error happened": "ocorreu um erro indefinido",
+    "sign in successful": "autenticação bem-sucedida",
+    "your password is too small": "a sua senha é muito pequena",
+    "this email has already been used": "este email já foi usado",
    
-    "None": "Nenhum",
-    "Unselected": "Não selecionado",
-    "Diziness": "Tonturas",
-    "Headaches": "Dor de cabeça",
-    "Irritability": "Irritabilidade",
-    "Mood changes": "Mudanças de humor.",
-    "Skipping Menstrual Cycle": "Ausência, alteração do ciclo menstrual.",
-    "Somnolence": "Sonolência",
-    "Sex": "Genero",
-    "Male": "Masculino",
-    "Female": "Feminino",
-    "Must be filled.": "Tem de ser preenchido.",
-    "Name": "Nome",
-    "Age": "Idade",
-    "Seizure Frequency": "Frequência de crises.",
+    "none": "nenhum",
+    "unselected": "não selecionado",
+    "diziness": "tonturas",
+    "headaches": "dor de cabeça",
+    "irritability": "irritabilidade",
+    "mood changes": "mudanças de humor",
+    "skipping menstrual cycle": "ausência/alteração do ciclo menstrual",
+    "somnolence": "sonolência",
+    "sex": "género",
+    "male": "masculino",
+    "female": "feminino",
+    "must be filled": "tem de ser preenchido",
+    "name": "nome",
+    "age": "idade",
+    "seizure frequency": "frequência de crises",
     "(e.g. once a week)": "(por exemplo uma vez por semana)",
-    "Most common type of seizure:   ": "Tipo de crise mais comum:   ",
-    "Absence": "Ausência",
-    "Atonic": "Atónica",
-    "Clonic": "Clonica",
-    "Myoclonic": "Mioclónica",
-    "Tonic": "Tónica",
-    "Tonic Clonic": "Tónica clónica",
-    "Medication prescription:   ": "Prescrição médicação:   ",
-    "Other medication": "Outro medicamento",
-    "Most common secondary effects:   ": "Efeitos secundários mais comuns:   ",
-    "Finish": "Terminar",
+    "most common type of seizure": "tipo de crise mais comum ",
+    "absence": "ausência",
+    "atonic": "atónica",
+    "clonic": "clonica",
+    "myoclonic": "mioclónica",
+    "tonic": "tónica",
+    "tonic Clonic": "tónica clónica",
+    "medication prescription": "medicamentos prescritos",
+    "other medication": "outro medicamento",
+    "most common secondary effects": "efeitos secundários mais comuns",
+    "finish": "terminar",
 
 
-    "Has to be a valid Email.": "Tem de ser um email valido.",
-    "You need a password.": "Necessita de uma senha.",
-    "Password": "Senha",
-    "Sign in": "Autenticar",
-    "Don't have an account? ": "Não tem conta criada? ",
-    "Sign up": "Registar",
+    "has to be a valid Email": "tem de ser um email valido",
+    "you need a password": "necessita de uma senha",
+    "password": "senha",
+    "sign in": "autenticar",
+    "don't have an account": "não tem conta criada",
+    "sign up": "registar",
 
 
-    "Patient": "Paciente",
-    "Caregiver": "Cuidador",
-    "You need an email.": "Necessita de um email.",
-    "Already have an account?": "Já tem conta? ",
+    "patient": "paciente",
+    "caregiver": "cuidador",
+    "you need an email": "necessita de um email",
+    "already have an account": "já tem conta",
 
-    "Error": "Erro",
+    "error": "erro",
 
-    "Introduction to Epilepsy": "Introdução à Epilepsia",
-    "Information": "Informação",
-    "Patients": "Pacientes",
-    "Camera Access": "Acesso à câmera",
-    "Tool": "Ferramenta",
-    "Record Seizure": "Gravar crises",
+    "introduction to Epilepsy": "introdução à Epilepsia",
+    "information": "informação",
+    "patients": "pacientes",
+    "camera access": "acesso à câmera",
+    "tool": "ferramenta",
+    "record seizure": "gravar crise",
     "caregiver@gmail.com": "cuidador@gmail.com",
 
 
-    "The person you will be monitoring will have to scan this code.": "A pessoa que irá monitorizar terá de fazer scan ao codigo QR.",
+    "the person you will be monitoring will have to scan this code": "a pessoa que irá monitorizar terá de fazer scan ao codigo QR",
 
 
-    "Patient Info": "Informação do Paciente",
-    "Statistics": "Estatiticas",
-    "Seizures": "Crises",
+    "patient info": "informação do Paciente",
+    "seizures": "crises",
     
 
-    "Allow Connected Device(s)": "Permitir conecção de dispositivo(s)",
-    "Connect": "Conectar",
+    "allow connected device(s)": "permitir conecção de dispositivo(s)",
 
 
-    "Seizure": "Crise",
-    "I am ok": "Estou bem",
-    "Emergency": "Emergência",
-    "Dismiss": "Descartar",
+    "seizure": "crise",
+    "i am ok": "estou bem",
+    "emergency": "emergência",
+    "dismiss": "descartar",
 
 
-    "Inhale": "Insprire",
-    "Hold": "Sustenha",
-    "Exhale": "Expire",
+    "inhale": "insprire",
+    "hold": "sustenha",
+    "exhale": "expire",
+    "location":"localização",
 
 
-    "To connect to your caregiver, have him scan this QR Code": "Para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
+    "to connect to your caregiver, have him scan this QR Code": "para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
 
 
-    "What is Epilepsy?": "O que é a epilépsia?",
-    "What is a seizure?": "O que é uma crise?",
-    "Types of seizures?": "Tipos de crises?",
-    "Possible trigers?": "Possiveis fatores que puderam despoletar crises?",
-    "Treating Seizures": "Tratar crises",
-    "Managing Epilepsy": "Gerir Epilepsia",
-    "What is SUDEP?": "O que é SUDEP?",
-    "Challenges in Epilepsy": "Desafios da Epilepsia",
+    "what is Epilepsy": "o que é a Epilépsia",
+    "what is a seizure": "o que é uma crise",
+    "types of seizures": "tipos de crises",
+    "Ppossible trigers": "possíveis fatores que puderam despoletar crises",
+    "treating seizures": "tratar crises",
+    "managing Epilepsy": "gerir a Epilépsia",
+    "what is SUDEP": "o que é SUDEP",
+    "challenges in Epilepsy": "desafios da Epilépsia",
 
 
-    "Date": "Data",
-    "Time": "Hora",
-    "Duration": "Duração",
-    "Type": "Tipo",
-    "Mood": "Humor",
+    "date": "data",
+    "time": "hora",
+    "duration": "duração",
+    "type": "tipo",
+    "mood": "humor",
 
 
-    "Data": "Dados",
-    "Name is Required": "É necessário um nome",
-    "Symptoms": "Sintomas",
-    "Email is Required": "É necessário um email",
-    "Please enter a valid email address": "Por favor insira um email valido",
-    "Moods": "Mudanças de humor",
-    "Password is Required": "É necessário uma Senha",
-    "Birth Control Pills": "Pilula",
-    "URL is Required": "É necessário um URL",
-    "Submit": "Submeter",
+    "data": "dados",
+    "name is required": "é necessário um nome",
+    "symptoms": "sintomas",
+    "email is required": "é necessário um email",
+    "please enter a valid email address": "por favor insira um email valido",
+    "moods": "mudanças de humor",
+    "password is required": "é necessário uma Senha",
+    "birth control pills": "pilula",
+    "URL is required": "é necessário um URL",
+    "submit": "submeter",
 
 
-    "Home": "Pagina inicial",
-    "Surveys": "Questionários",
-    "User": "Utilizador",
+    "home": "pagina inicial",
+    "surveys": "questionários",
+    "user": "utilizador",
+    "increment":"incrementar",
 
-    "Connected Devices": "Dispositivos",
-    "Medication": "Medicação",
-    "Sleep": "Sono",
-    "Food": "Alimentação",
+    "medication": "medicação",
+    "sleep": "sono",
+    "food": "alimentação",
 
-    "Connected Device": "Dispositivos ligados",
-    "Log your sleeping schedule": "Registe o seu horario de sono",
-    "Stressed? Relax here": "Exercicios de respiração",
+    "connected device(s)": "dispositivo ligado(s)",
+    "log your sleeping schedule": "registe o seu horario de sono",
+    "Stressed":"nervoso",
+    "Relax here": "relaxe aqui",
 
-    "Types of exercises": "Tipos de exercicios",
-    "Time duration": "Duração",
+    "types of exercises": "tipos de exercicios",
+    "time duration": "duração",
+    "1min":"1min",
+    "2min":"2min",
+    "5min":"5min",
+    "10min":"10min",
 
-    "You need to set a time": "Precisa de definir uma hora",
+
+    "you need to set a time": "precisa de definir uma hora",
     "(e.g. hh:mm am or hh:mm pm)": "(exemplo hh:min manhã ou hh:min tarde)",
-    "You need to set a duration.": "Precisa de definir uma duração.",
-    "Seizure Duration": "Duração da crise",
+    "you need to set a duration": "precisa de definir uma duração",
+    "seizure duration": "duração da crise",
     "(e.g. mm:ss)": "(exemplo min:seg)",
-    "Seizure Type:": "Tipo de crise:",
-    "Normal": "Normal",
-    "Good": "Bom",
-    "Bad": "Mau",
-    "Possible Triggers:": "Fatores que possam dispoletar uma crise",
-    "Changes in Medication": "Mudanças na medicação",
-    "Overtired or irregular sleep": "Cansado ou sono irregular",
-    "Irregular Diet": "Dieta Alimentação irregular",
-    "Alcohol or Drug Abuse": "Abuso de Alcool ou Drogas",
-    "Bright or flashing lights": "Luzes intermitentes",
-    "Emotional Stress": "Stress emocional",
-    "Fever or Overheated": "Febre",
-    "Hormonal Fluctuations": "Flutuações Hormonais",
-    "Sick": "Doente",
-    "Other": "Outros",
-    "Triggers Notes": "Notas de fatores que podem dispoltar crises",
-    "Not filled": "Não preenchido",
-    "Description:": "Descrição:",
-    "Had an aura": "Sentir uma aura",
-    "Loss of urine or bowel control": "Perda de urina ou de controlo da bexiga",
-    "Changes in awareness": "Alteração de consciência",
-    "Automatic Repeated Movements": "Movimentos automaticos e repetitivos",
-    "Loss of Ability to communicate": "Perda de capacidade de comunicação",
-    "Muscle Stiffness": "Rigidez muscular",
-    "Muscle twitch": "Espasmos muscular",
-    "Loss of consciousness": "Perda de consciência",
-    "Description Notes": "Notas de descrição",
-    "Post Events:": "Eventos pós crise:",
-    "Unnable to communicate": "Incapaz de comunicar",
-    "Remembers event": "Lembra-se da crise",
-    "Muscle weakness": "Enfraquecimento muscular",
-    "Sleepy": "Sonolento",
-    "Post Events Notes": "Notas de eventos pós crise",
-    "Add video recording (optional)": "Adicionar gravação de video (opcional)",
+    "seizure type:": "tipo de crise",
+    "normal": "normal",
+    "good": "bom",
+    "bad": "mau",
+    "changes in medication": "mudanças na medicação",
+    "overtired or irregular sleep": "cansado ou sono irregular",
+    "irregular diet": "dieta/alimentação irregular",
+    "alcohol or drug abuse": "abuso de alcool ou drogas",
+    "bright or flashing lights": "luzes intermitentes",
+    "emotional stress": "stress emocional",
+    "fever or overheated": "febre",
+    "hormonal fluctuations": "flutuações Hormonais",
+    "sick": "doente",
+    "other": "outros",
+    "triggers notes": "notas de fatores que podem dispoltar crises",
+    "not filled": "não preenchido",
+    "description:": "descrição:",
+    "had an aura": "sentir uma aura",
+    "loss of urine or bowel control": "perda de urina ou de controlo da bexiga",
+    "changes in awareness": "alteração de consciência",
+    "automatic repeated movements": "movimentos automaticos e repetitivos",
+    "loss of ability to communicate": "perda de capacidade de comunicação",
+    "muscle stiffness": "rigidez muscular",
+    "muscle twitch": "espasmos muscular",
+    "loss of consciousness": "perda de consciência",
+    "description notes": "notas de descrição",
+    "post events:": "eventos pós crise",
+    "unnable to communicate": "incapaz de comunicar",
+    "remembers event": "lembra-se da crise",
+    "muscle weakness": "enfraquecimento muscular",
+    "sleepy": "sonolento",
+    "post events notes": "notas de eventos pós crise",
+    "add video recording (optional)": "adicionar gravação de video (opcional)",
 
 
-    "Sign Out": "Sair",
+    "sign Out": "sair",
 
 
-    "Type of Seizure": "Tipos de crise",
-    "Mood after Seizure": "Humor após crise",
-    "Possible Triggers": "Possiveis fatores que puderam despoletar crises",
+    "type of seizure": "tipos de crise",
+    "mood after seizure": "humor após crise",
+    "possible triggers": "possiveis fatores que puderam despoletar crises",
 
 
     "Inhale-Hold-Exhale-Hold": "Inspire-Sustenha-Expire-Sustenha",
-    "Custom": "Base",
-    "Awake": "Acordar",
-    "Deep Calm": "Calma profunda",
-    "Pranayama": "Pranayama",
-    "Square": "Quadrado",
-    "Ujjayi": "Ujjayi",
+    "custom": "base",
+    "awake": "acordar",
+    "deep calm": "calma profunda",
+    "pranayama": "pranayama",
+    "square": "quadrado",
+    "ujjayi": "ujjayi",
 
 
-    "STATISTICS": "ESTATITICAS",
-    "MODULES": "MODULOS",
-    "CONNECT": "DISPOSITIVOS",
+    "statistics": "estatiticas",
+    "modules": "modulos",
+    "connect": "dispositivos",
 
 
-    "You need a Survey Name": "É necessário dar um nome ao questionário",
-    "Survey Name": "Nome do questionário",
-    "You need a question": "Necessita de questões",
-    "Question": "Questões",
-    "Add question": "Adicionar questão",
-    "Create": "Criar",
+    "you need a survey Name": "é necessário dar um nome ao questionário",
+    "survey name": "nome do questionário",
+    "you need a question": "necessita de questões",
+    "question": "questões",
+    "add question": "adicionar questão",
+    "create": "criar",
 
 
-    "Next": "Próxima"
+    "next": "próxima",
+    "answer":"resposta"
 
 }
